cache-simulator/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cache-simulator
  labels:
    name: cache-simulator
