cache-simulator/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-simulator
  namespace: cache-simulator
  labels:
    app: cache-simulator
spec:
  type: ClusterIP
  selector:
    app: cache-simulator
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
